i am so /committed/ to this project that i am even forgetting to *commit* (imma see myself out)

--- a/src/app/components/general/button/button.component.html
+++ b/src/app/components/general/button/button.component.html
@@ -1,7 +1,7 @@
 <img *ngIf="!image" src="{{ type.image.path }}" alt="icon for {{ name }} link" loading="lazy" />
 <img *ngIf="image" src="{{ image.path }}" alt="{{ image.alt }}" loading="lazy" />
 <p *ngIf="showName">{{name}}</p>
-<app-tooltip *ngIf="type == lt.GITHUB" name="Please don't look at my code, it's horrible"
+<app-tooltip [visible]="type == lt.GITHUB && showTooltip" name="Please don't look at my code, it's horrible"
   [direction]="d.LEFT"></app-tooltip>
 <!--p *ngIf="type === lt.OTHER || type === lt.PERSON" (click)="onClick()">{{name}}</p-->
 <ng-content></ng-content>
