--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -18,7 +18,7 @@
         </div>
       </div>
     </li>
-    <li>
+    <li class="home">
       <a routerLink="home" routerLinkActive="active" ariaCurrentWhenActive="page" queryParamsHandling="merge"
         class="link pill">Home</a>
     </li>
@@ -26,7 +26,7 @@
       <a routerLink="career" routerLinkActive="active" ariaCurrentWhenActive="page" queryParamsHandling="merge"
         class="link pill">Karriere</a>
     </li>
-    <li>
+    <li class="projects">
       <a routerLink="projects" routerLinkActive="active" ariaCurrentWhenActive="page" queryParamsHandling="merge"
         class="link pill">Projekte</a>
     </li>
