--- a/src/app/components/general/skills/skill-item/skill-item.component.html
+++ b/src/app/components/general/skills/skill-item/skill-item.component.html
@@ -1,5 +1,5 @@
-<app-tooltip [name]="skillText" [icon]="skill.icon" [description]="skill.description" [direction]="direction.TOP"
-  [link]="
+<app-tooltip [visible]="showTooltip" [name]=" skillText" [icon]="skill.icon" [description]="skill.description"
+  [direction]="direction.TOP" [link]="
     skill.url
       ? {
           id: 'link_for_' + skill.identifier,
@@ -10,13 +10,14 @@
       : undefined
   ">
   <p class="cat-title">
-    Kategorie{{ skill.skillcategories.length > 1 ? "n" : "" }}
+    <b>Kategorie{{ skill.skillcategories.length > 1 ? "n" : "" }}</b>
   </p>
   <div *ngFor="let category of skill.skillcategories" class="cat-container">
     <img class="skill-cat-img small-image" src="{{ category.image.path }}" alt="{{ category.image.alt }}"
       loading="lazy" />
     <p>{{ category.name }}</p>
   </div>
+  <div (click)="goToProjects()" class="pill link">Dazugehörige Projekte ansehen</div>
 </app-tooltip>
 <div [class]="
     (showPercent ? 'percent-' + skill.knowledgepercent: '')+' flex-row-nojust pill skill-item'
