--- a/src/app/components/views/career/career.component.scss
+++ b/src/app/components/views/career/career.component.scss
@@ -28,14 +28,13 @@
             text-align: right;
         }
 
-        & .hov:hover {
-            & app-tooltip {
-                @include mixins.fadein();
-            }
-        }
+        & .hov {
+            width: 100%;
 
-        & app-tooltip {
-            @include mixins.fadeout();
+            &>p {
+                text-align: center;
+                width: 100%;
+            }
         }
     }
 
@@ -139,7 +138,7 @@
                 }
 
                 @include screens.tablet-screen {
-                    flex-basis: calc(50% - (variables.$elem-padding / 2));
+                    flex-basis: calc(100%);
                 }
 
                 @include screens.laptop-screen {
@@ -147,11 +146,11 @@
                 }
 
                 @include screens.desktop-screen {
-                    flex-basis: calc((100% - (4 * variables.$elem-padding)) / 3);
+                    flex-basis: calc(50% - (variables.$elem-padding / 2));
                 }
 
                 @include screens.large-screen {
-                    flex-basis: calc((100% - (6 * variables.$elem-padding)) / 4);
+                    flex-basis: calc((100% - (4 * variables.$elem-padding)) / 3);
                 }
             }
         }
