--- a/src/app/components/views/career/career.component.scss
+++ b/src/app/components/views/career/career.component.scss
@@ -30,6 +30,7 @@
 
         & .hov {
             width: 100%;
+            position: relative;
 
             &>p {
                 text-align: center;
