--- a/src/app/components/general/skills/skill-item/skill-item.component.html
+++ b/src/app/components/general/skills/skill-item/skill-item.component.html
@@ -1,5 +1,8 @@
-<app-tooltip [visible]="showTooltip" [name]=" skillText" [icon]="skill.icon" [description]="skill.description"
-  [direction]="direction.TOP" [link]="
+<div [class]="
+    (showPercent ? 'percent-' + skill.knowledgepercent: '')+' flex-row-nojust pill skill-item'
+  " (mouseenter)="showTooltip = true" (mouseleave)="showTooltip = false">
+  <app-tooltip [visible]="showTooltip" [name]=" skillText" [icon]="skill.icon" [description]="skill.description"
+    [direction]="direction.TOP" [link]="
     skill.url
       ? {
           id: 'link_for_' + skill.identifier,
@@ -9,19 +12,16 @@
         }
       : undefined
   ">
-  <p class="cat-title">
-    <b>Kategorie{{ skill.skillcategories.length > 1 ? "n" : "" }}</b>
-  </p>
-  <div *ngFor="let category of skill.skillcategories" class="cat-container">
-    <img class="skill-cat-img small-image" src="{{ category.image.path }}" alt="{{ category.image.alt }}"
-      loading="lazy" />
-    <p>{{ category.name }}</p>
-  </div>
-  <div (click)="goToProjects()" class="pill link">Dazugehörige Projekte ansehen</div>
-</app-tooltip>
-<div [class]="
-    (showPercent ? 'percent-' + skill.knowledgepercent: '')+' flex-row-nojust pill skill-item'
-  ">
+    <p class="cat-title">
+      <b>Kategorie{{ skill.skillcategories.length > 1 ? "n" : "" }}</b>
+    </p>
+    <div *ngFor="let category of skill.skillcategories" class="cat-container">
+      <img class="skill-cat-img small-image" src="{{ category.image.path }}" alt="{{ category.image.alt }}"
+        loading="lazy" />
+      <p>{{ category.name }}</p>
+    </div>
+    <div (click)="goToProjects()" class="pill link">Dazugehörige Projekte ansehen</div>
+  </app-tooltip>
   <div *ngIf="showPercent" class="skill-cat-img-container">
     <img class="skill-cat-img small-image" *ngFor="let category of skill.skillcategories"
       src="{{ category.image.path }}" alt="{{ category.image.alt }}" loading="lazy" />
