--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -2,6 +2,17 @@
 <div class="welcome default-grid">
   <div class="photo flex-center slimpill">
     <img src="{{ me.image.path }}" alt="{{ me.image.alt }}" loading="lazy" />
+    <svg id="svg-filter">
+      <filter id="svg-img-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox"
+        primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB">
+        <feDisplacementMap in="SourceGraphic" in2="convolveMatrix2" scale="30" xChannelSelector="R" yChannelSelector="B"
+          x="0%" y="0%" width="500%" height="500%" result="displacementMap2" />
+        <feConvolveMatrix order="3 3" kernelMatrix="-3 0 0 
+    0 -3 0 
+    0 0 4" divisor="1" bias="1" targetX="0" targetY="0" edgeMode="duplicate" preserveAlpha="true" x="0%" y="0%"
+          width="500%" height="500%" in="displacementMap2" result="convolveMatrix3" />
+      </filter>
+    </svg>
   </div>
   <div class="desc slimpill">
     <h3>Hallihallo!</h3>
@@ -18,9 +29,9 @@
   </div>
   <div class="socials slimpill flex-row-just">
     <h4 class="socialstext">Erreichen kannst du mich hier:</h4>
-    <app-button (click)="callMe" [type]="lt.PHONE" name="Meine Telefonnummer"></app-button>
-    <app-button (click)="mailMe" [type]="lt.MAIL" name="Meine E-Mail"></app-button>
-    <app-button (click)="myGithub" [type]="lt.GITHUB" name="Mein Github Profil"></app-button>
+    <app-button (click)="callMe()" [type]="lt.PHONE" name="Meine Telefonnummer"></app-button>
+    <app-button (click)="mailMe()" [type]="lt.MAIL" name="Meine E-Mail"></app-button>
+    <app-button (click)="myGithub()" [type]="lt.GITHUB" name="Mein Github Profil"></app-button>
   </div>
 </div>
 <!-- app-skills-percent-list -->
