--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -6,13 +6,19 @@
       <filter id="svg-img-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox"
         primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB">
         <feDisplacementMap in="SourceGraphic" in2="convolveMatrix2" scale="30" xChannelSelector="R" yChannelSelector="B"
-          x="0%" y="0%" width="500%" height="500%" result="displacementMap2" />
+          x="0%" y="0%" width="500%" height="300%" result="displacementMap2" />
         <feConvolveMatrix order="3 3" kernelMatrix="-3 0 0 
     0 -3 0 
     0 0 4" divisor="1" bias="1" targetX="0" targetY="0" edgeMode="duplicate" preserveAlpha="true" x="0%" y="0%"
-          width="500%" height="500%" in="displacementMap2" result="convolveMatrix3" />
+          width="500%" height="300%" in="displacementMap2" result="convolveMatrix3" />
       </filter>
     </svg>
+    <a *ngIf="!showFirst" style="font-size:1.5em;text-decoration:underline;margin-right:1.5em;"
+      href="https://open.spotify.com/track/0DPXhtJlA7qKrq2CjAPuiP?si=b6b889f215394ff0">Mysteriöser link</a>
+    <a *ngIf="!showFirst" style="font-size:1.5em;text-decoration:underline;"
+      href="https://open.spotify.com/track/3821fqXQU1myEolEYy8VRC?si=bf44b29c6f8a478b">Mysteriöser link</a>
+    <a *ngIf="!showFirst" style="font-size:1.5em;text-decoration:underline;margin-left:3em;"
+      href="https://open.spotify.com/track/3B6bxYkDG7SH3T93rETpc1?si=e2136f3574fe4096">Mysteriöser link</a>
   </div>
   <div class="desc slimpill">
     <h3>Hallihallo!</h3>
@@ -21,11 +27,8 @@
     <p>Ich heisse {{ me.firstname }} {{ me.lastname}} und bin <span class="age">{{ me.birthdate | age:age }}</span> alt.
     </p>
     <h4>Was ich tue?</h4>
-    <p>Als leidenschaftlicher Problemlöser und kreativer Geist habe ich mir zum Ziel gesetzt, innovative Lösungen zu
-      realisieren und durch <a (click)="navigateProjects()" class="link">&nbsp;meine Arbeit&nbsp;</a> einen positiven
-      Einfluss zu hinterlassen. Sei es durch das Entwickeln von
-      Applikationen mit Mehrwert, Wissensvermittlung an die kommenden Generationen oder das Kreieren von Kunstwerken,
-      die die Menschen erreichen und erfreuen sollen.</p>
+    <p (mouseenter)="showFirst = !showFirst">{{showFirst ? text1 : text2}}<a (click)="navigateProjects()"
+        class="link">&nbsp;{{showFirst ? btnText1 : btnText2}}&nbsp;</a>{{showFirst ? endText1 : endText2}}</p>
   </div>
   <div class="socials slimpill flex-row-just">
     <h4 class="socialstext">Erreichen kannst du mich hier:</h4>
